<resources>
    <string name="app_name">Detplagi</string>
    <string name="recreerIndex">Recréer un nouvel index</string>
    <string name="action_about">About</string>
    <string name="search_title">Search…</string>
    <string name="entrezMotCle">Entrez le mot clé</string>
    <string name="titreCreationIndex">Nouvel index en cours de création</string>
    <string name="corpsCreationIndex">Veuillez patienter, ça va prendre quelques minutes</string>
    <string name="erreurCreationIndex">Erreur lors de la création de l\'index</string>
    <string name="aucunResultat">Aucun résultat</string>
    <string name="erreurAdaptationRequete">Erreur lors de l\'adaptation de la requête</string>
    <string name="title_activity_detail">Full Review</string>

    <string name="action_settings">Settings</string>
    <string name="texteBienvenue">Bienvenue sur Detplagi ! Bonne utilisation</string>
    <string name="tempsDeRecherche">Temps de recherche: </string>
    <string name="nombreTotalResultat">Nombre total de résultats: </string>
    <string name="nombreAffiche">Nombre de résultats récupérés: </string>
    <string name="titre">Titre: </string>
    <string name="auteur">Auteur(s): </string>
    <string name="anneeDePub">Année de publication: </string>
    <string name="publicateur">Publicateur(s): </string>
    <string name="typeDarticle">Type de l\'article: </string>
    <string name="volume">Volume: </string>
    <string name="pages">Pages: </string>
    <string name="acces">Accès: </string>
    <string name="source">Source: </string>
    <string name="lienVersArticle">Lien vers l\'article: </string>

</resources>