<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/blocTitre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"
            android:paddingBottom="10dp"/>

        <TextView
            android:id="@+id/cTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:textSize="15sp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/blocAuteurs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/blocTitre"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tAuteur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auteur"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/cAuteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:textSize="15sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/blocAnnePub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@id/blocAuteurs">
        <TextView
            android:id="@+id/tAnnePub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anneeDePub"
            android:textSize="15sp"
            android:layout_marginEnd="5dp"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:id="@+id/cAnnePub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/noir"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/blocPublicateur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@id/blocAnnePub">
        <TextView
            android:id="@+id/tPublicateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/publicateur"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/cPublicateur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:textSize="15sp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/blocType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:layout_below="@id/blocPublicateur">
        <TextView
            android:id="@+id/tTypeArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/typeDarticle"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/cTypeArticle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/blocVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/blocType">
        <TextView
            android:id="@+id/tVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/volume"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/cVolume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/blocPages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/blocVolume">
        <TextView
            android:id="@+id/tPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/pages"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/cPages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/blocAcces"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/blocPages">
        <TextView
            android:id="@+id/tAcces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/acces"
            android:layout_marginEnd="5dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/cAcces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/noir"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/blocSource"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        android:paddingBottom="15dp"
        android:layout_below="@id/blocAcces">


        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/source"
            android:layout_marginEnd="15dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/lienVersArt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/lienVersArticle"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
    </LinearLayout>



</RelativeLayout>